Added mobile availability

--- a/Pidro/templates/index.html
+++ b/Pidro/templates/index.html
@@ -12,7 +12,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="/" class="navbar-brand">Walter: Cyborg (Pidro)</a>
+          <a href="/" class="navbar-brand">WalterBot 9000 MK III</a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -44,32 +44,32 @@
               <br />
               <div class="container">
                   <div class="row">
-                      <div class="col-md-7"></div>
-                      <div class="col-md-1 arrow-container"></div>
-                      <div class="col-md-1 arrow-container">
-                          <button class="btn btn-lg btn-default disabled arrow"
+                      <div class="col-md-7 col-xs-0"></div>
+                      <div class="col-xs-4 col-md-1 arrow-container"></div>
+                      <div class="col-xs-4 col-md-1 arrow-container">
+                          <button class="btn btn-lg btn-default  arrow"
                                   data-arrow="38">
                             <i class="glyphicon glyphicon-arrow-up"></i>
                           </button>
                       </div>
-                      <div class="col-md-1 arrow-container"></div>
+                      <div class="col-xs-4 col-md-1 arrow-container"></div>
                   </div>
                   <div class="row">
-                      <div class="col-md-7"></div>
-                      <div class="col-md-1 arrow-container">
-                          <button class="btn btn-lg btn-default disabled arrow"
+                      <div class="col-md-7 col-xs-0"></div>
+                      <div class="col-xs-4 col-md-1 arrow-container">
+                          <button class="btn btn-lg btn-default arrow"
                                   data-arrow="37">
                             <i class="glyphicon glyphicon-arrow-left"></i>
                           </button>
                       </div>
-                      <div class="col-md-1 arrow-container">
-                          <button class="btn btn-lg btn-default disabled arrow"
+                      <div class="col-xs-4 col-md-1 arrow-container">
+                          <button class="btn btn-lg btn-default arrow"
                                   data-arrow="40">
                             <i class="glyphicon glyphicon-arrow-down"></i>
                           </button>
                       </div>
-                      <div class="col-md-1 arrow-container">
-                          <button class="btn btn-lg btn-default disabled arrow"
+                      <div class="col-xs-4 col-md-1 arrow-container">
+                          <button class="btn btn-lg btn-default arrow"
                                   data-arrow="39">
                             <i class="glyphicon glyphicon-arrow-right"></i>
                           </button>
